src/objects/Mogli_SMS__SMS_Template__c.object
<CustomObject>
    <fields>
        <fullName>Mogli_SMS__FormTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The form that will be initiated upon sending this template</description>
        <inlineHelpText>The form that will be initiated upon sending this template</inlineHelpText>
        <label>Form Template</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Active Forms maybe selected</errorMessage>
            <filterItems>
                <field>Mogli_SMS__FormTemplate__c.Mogli_SMS__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>Only Active Forms maybe selected</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Mogli_SMS__FormTemplate__c</referenceTo>
        <relationshipLabel>SMS Templates</relationshipLabel>
        <relationshipName>SMS_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Name__c</fullName>
        <label>Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Text__c</fullName>
        <label>Text</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <label>SMS Template</label>
    <listViews>
        <fullName>Mogli_SMS__All</fullName>
        <columns>Mogli_SMS__Name__c</columns>
        <columns>Mogli_SMS__Text__c</columns>
        <columns>Mogli_SMS__FormTemplate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ST{YY}{MM}{DD}-{0000000000}</displayFormat>
        <label>SMS Template #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>